PadoGrid
========

Release: Version 0.9.5-SNAPSHOT
Release Date: 02/09/21

- Added find_padogrid for searching files in PadoGrid. You can now perform
  a global search on your RWEs for any files that are part of workspace installations.
- Added support for DB ingestion and updated 'test_group' with 'clear' support in Geode.

*************************************************************************

Release: Version 0.9.4
Release Date: 01/10/21

- Fixed a VM synchronization and vm key bug.
- RWE now selects the first workspace found as the default workspace if the default
  workspace is not defined.
- Added Jet core module that includes support for Kafka stream aggregator. The
  aggregator is a Jet sink job capable of transforming Kafka events from multiple
  topics into an object graph based on temporal entity relationships.
- perf_test now supports data structures other than Hazelcast IMap. Supported
  data structures are IMap, ReplicatedMap, ICache, ITopic, ReplicatedTopic,
  and IQueue.
- perf_test now supports the sleep operation for simulating workflows.
- Added integrated support for Pado. You can now create a Pado cluster using the
  'create_cluster -type pado' command, which creates a Pado cluster that includes
  the ETL, security and test tools.
- Pado Desktop is also available for managing Pado clusters.
  
*************************************************************************

Release: Version 0.9.3
Release Date: 09/23/20

- Added support for all JDK version. Further tests required.
- Added support for generating '-all' dependencies. Each product module now has
  a `padogrid-<product>-all-*.jar' file containing a complete set compiled classes.
  You can now include just a single '-all' jar file in your class path.
- Added the `-workspace` option to `install_bundle` for checking out bundles in the
  form of workspaces. With this option, you can now develop and test online bundles
  from workspaces and check in your changes directly from there.