@@ -3,6 +3,7 @@ package org.apache.geode.addon.kafka.debezium;
 import java.lang.reflect.InvocationTargetException;
 import java.text.ParseException;
 import java.util.Collection;
+import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -45,6 +46,8 @@ import org.slf4j.LoggerFactory;
 public class DebeziumKafkaSinkTask extends SinkTask {
 
 	private static final Logger logger = LoggerFactory.getLogger(DebeziumKafkaSinkTask.class);
+	
+	private static final int MICRO_IN_MILLI = 1000;
 
 	private ClientCache clientCache;
 	private boolean isDebugEnabled = false;
@@ -74,11 +77,11 @@ public class DebeziumKafkaSinkTask extends SinkTask {
 
 		gemfirePropertyFile = props.get(DebeziumKafkaSinkConnector.GEMFIRE_PROPERTY_FILE_CONFIG);
 		if (gemfirePropertyFile == null) {
-			gemfirePropertyFile = "/geode-addon/etc/client-gemfire.properties";
+			gemfirePropertyFile = "/padogrid/etc/client-gemfire.properties";
 		}
 		gemfireClientFile = props.get(DebeziumKafkaSinkConnector.GEMFIRE_CLIENT_CONFIG_FILE_CONFIG);
 		if (gemfireClientFile == null) {
-			gemfireClientFile = "/geode-addon/etc/client-cache.xml";
+			gemfireClientFile = "/padogrid/etc/client-cache.xml";
 		}
 		regionPath = props.get(DebeziumKafkaSinkConnector.REGION_CONFIG);
 		if (regionPath == null) {
@@ -131,36 +134,37 @@ public class DebeziumKafkaSinkTask extends SinkTask {
 			}
 		}
 
-		String classpathStr = System.getProperty("java.class.path");
-		logger.info("CLASSPATH=" + classpathStr);
-		
 		if (isDebugEnabled) {
-			logger.info("====================================================================================");
-			logger.info(props.toString());
-			logger.info("gemfirePropertyFile = " + gemfirePropertyFile);
-			logger.info("gemfireClientFile = " + gemfireClientFile);
-			logger.info("region = " + regionPath);
-			logger.info("smtEnabled = " + isSmtEnabled);
-			logger.info("deleteEnabled = " + isDeleteEnabled);
-			logger.info("keyClassName = " + keyClassName);
-			logger.info("keyColumnNames");
+			System.out.println("====================================================================================");
+			String classpathStr = System.getProperty("java.class.path");
+			System.out.println("CLASSPATH=" + classpathStr);
+			
+			System.out.println(props);
+			System.out.println("gemfirePropertyFile = " + gemfirePropertyFile);
+			System.out.println("gemfireClientFile = " + gemfireClientFile);
+			System.out.println("region = " + regionPath);
+			System.out.println("smtEnabled = " + isSmtEnabled);
+			System.out.println("deleteEnabled = " + isDeleteEnabled);
+			System.out.println("keyClassName = " + keyClassName);
+			System.out.println("keyColumnNames");
 			for (int i = 0; i < keyColumnNames.length; i++) {
-				logger.info("   [" + i + "] " + keyColumnNames[i]);
+				System.out.println("   [" + i + "] " + keyColumnNames[i]);
 			}
-			logger.info("keyFieldNames");
+			System.out.println("keyFieldNames");
 			for (int i = 0; i < keyFieldNames.length; i++) {
-				logger.info("   [" + i + "] " + keyFieldNames[i]);
+				System.out.println("   [" + i + "] " + keyFieldNames[i]);
 			}
-			logger.info("valueClassName = " + valueClassName);
-			logger.info("valueColumnNames");
+			System.out.println("valueClassName = " + valueClassName);
+			System.out.println("valueColumnNames");
 			for (int i = 0; i < valueColumnNames.length; i++) {
-				logger.info("   [" + i + "] " + valueColumnNames[i]);
+				System.out.println("   [" + i + "] " + valueColumnNames[i]);
 			}
-			logger.info("valueFieldNames");
+			System.out.println("valueFieldNames");
 			for (int i = 0; i < valueFieldNames.length; i++) {
-				logger.info("   [" + i + "] " + valueFieldNames[i]);
+				System.out.println("   [" + i + "] " + valueFieldNames[i]);
 			}
-			logger.info("====================================================================================");
+			System.out.println("====================================================================================");
+			System.out.flush();
 		}
 		try {
 			objConverter = new ObjectConverter(keyClassName, keyFieldNames, valueClassName, valueFieldNames);
@@ -174,6 +178,43 @@ public class DebeziumKafkaSinkTask extends SinkTask {
 		clientCache = new ClientCacheFactory().create();
 		regon = clientCache.getRegion(regionPath);
 	}
+	
+	private Object[] getFieldFromMap(Map keyMap) {
+		// Determine the key column names.
+		if (keyColumnNames == null) {
+			keyColumnNames = (String[]) keyMap.keySet().toArray();
+		}
+		Object keyFieldValues[] = null;
+		if (keyColumnNames != null) {
+			keyFieldValues = new Object[keyColumnNames.length];
+			for (int j = 0; j < keyColumnNames.length; j++) {
+				keyFieldValues[j] = keyMap.get(keyColumnNames[j]);
+			}
+		}
+		return keyFieldValues;
+	}
+
+	private Object[] getValueFieldsFromMap(Map valueMap) {
+		// Determine the value column names.
+		if (valueColumnNames == null) {
+			valueColumnNames = (String[]) valueMap.keySet().toArray();
+		}
+		Object valueFieldValues[] = null;
+		if (valueColumnNames != null) {
+			valueFieldValues = new Object[valueColumnNames.length];
+			Class<?> valueFieldTypes[] = objConverter.getValueFielTypes();
+			for (int j = 0; j < valueColumnNames.length; j++) {
+				valueFieldValues[j] = valueMap.get(valueColumnNames[j]);
+				// TODO: This is a hack. Support other types also.
+				if (valueFieldTypes[j] != null && valueFieldTypes[j] == Date.class) {
+					if (valueFieldValues[j] instanceof Number) {
+						valueFieldValues[j] = new Date((long) valueFieldValues[j] / MICRO_IN_MILLI);
+					}
+				}
+			}
+		}
+		return valueFieldValues;
+	}
 
 	@Override
 	public void put(Collection<SinkRecord> records) {
@@ -186,56 +227,92 @@ public class DebeziumKafkaSinkTask extends SinkTask {
 			Schema valueSchema = sinkRecord.valueSchema();
 
 			if (isDebugEnabled) {
-				logger.info("sinkRecord=" + sinkRecord);
-				logger.info("keySchema=" + keySchema);
-				logger.info("valueSchema=" + valueSchema);
-				logger.info("keyFields=" + keySchema.fields());
-				if (valueSchema == null) {
-					logger.info("valueSchema=null");
-				} else {
-					logger.info("valueFields=" + valueSchema.fields());
+				System.out.println("sinkRecord=" + sinkRecord);
+				System.out.println("keySchema=" + keySchema);
+				System.out.println("valueSchema=" + valueSchema);
+				if (keySchema != null) {
+					System.out.println("keyFields=" + keySchema.fields());
+				}
+				if (valueSchema != null) {
+					System.out.println("valueFields=" + valueSchema.fields());
 				}
 			}
 
 			// Struct objects expected
-			Struct keyStruct = (Struct) sinkRecord.key();
-			Struct valueStruct = (Struct) sinkRecord.value();
+			System.out.println("*************************key:" + sinkRecord.key().getClass().toString());
+			System.out.println("*************************value:" + sinkRecord.value().getClass().toString());
+			System.out.println(sinkRecord.key().toString());
+			System.out.println(sinkRecord.value().toString());
 
-			boolean isDelete = valueStruct == null;
-			Struct afterStruct = null;
-			Object op = null;
-			if (isSmtEnabled) {
-				afterStruct = valueStruct;
-			} else if (valueStruct != null) {
-				op = valueStruct.get("op");
-				isDelete = op != null && op.toString().equals("d");
-				afterStruct = (Struct) valueStruct.get("after");
+			Object keyFieldValues[] = null;
+			Object valueFieldValues[] = null;
+			boolean isDelete;
+			if (sinkRecord.key() instanceof Map) {
+				keyFieldValues = getFieldFromMap((Map) sinkRecord.key());
+				isDelete = sinkRecord.value() == null;
+				if (sinkRecord.value() != null) {
+					valueFieldValues = getValueFieldsFromMap((Map) sinkRecord.value());
+				}
+			} else {
+				Struct keyStruct = (Struct) sinkRecord.key();
+				Struct valueStruct = (Struct) sinkRecord.value();
+
+				isDelete = valueStruct == null;
+				Struct afterStruct = null;
+				Object op = null;
+				if (isSmtEnabled) {
+					afterStruct = valueStruct;
+				} else if (valueStruct != null) {
+					op = valueStruct.get("op");
+					isDelete = op != null && op.toString().equals("d");
+					afterStruct = (Struct) valueStruct.get("after");
+				}
+				if (isDebugEnabled) {
+					System.out.println("op=" + op);
+					System.out.println("isDelete = " + isDelete);
+					System.out.println("afterStruct = " + afterStruct);
+					System.out.flush();
+				}
+
+				// Key
+				// Determine the key column names.
+				if (keyColumnNames == null) {
+					keyColumnNames = getColumnNames(keyStruct);
+				}
+				if (keyColumnNames != null) {
+					keyFieldValues = new Object[keyColumnNames.length];
+					for (int j = 0; j < keyColumnNames.length; j++) {
+						keyFieldValues[j] = keyStruct.get(keyColumnNames[j]);
+					}
+				}
+
+				// Value
+				// Determine the value column names.
+				if (valueColumnNames == null) {
+					valueColumnNames = getColumnNames(valueStruct);
+				}
+				if (valueColumnNames != null) {
+					valueFieldValues = new Object[valueColumnNames.length];
+					Class<?> valueFieldTypes[] = objConverter.getValueFielTypes();
+					for (int j = 0; j < valueColumnNames.length; j++) {
+						valueFieldValues[j] = afterStruct.get(valueColumnNames[j]);
+						// TODO: This is a hack. Support other types also.
+						if (valueFieldTypes[j] != null && valueFieldTypes[j] == Date.class) {
+							if (valueFieldValues[j] instanceof Number) {
+								valueFieldValues[j] = new Date((long) valueFieldValues[j] / MICRO_IN_MILLI);
+							}
+						}
+					}
+				}
 			}
-			if (isDebugEnabled) {
-				logger.info("op=" + op);
-				logger.info("isDelete = " + isDelete);
-				logger.info("afterStruct = " + afterStruct);
-			}
 
-			/*
-			 * Key
-			 */
-			Object key;
-
-			// Determine the key column names.
-			if (keyColumnNames == null) {
-				keyColumnNames = getColumnNames(keyStruct);
-			}
-
+			// Key
+			Object key = null;
 			// If the key column names are not defined or cannot be determined then
 			// assign UUID for the key value
 			if (keyColumnNames == null) {
 				key = UUID.randomUUID().toString();
 			} else {
-				Object keyFieldValues[] = new Object[keyColumnNames.length];
-				for (int j = 0; j < keyColumnNames.length; j++) {
-					keyFieldValues[j] = keyStruct.get(keyColumnNames[j]);
-				}
 				try {
 					key = objConverter.createKeyObject(keyFieldValues);
 				} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
@@ -244,26 +321,15 @@ public class DebeziumKafkaSinkTask extends SinkTask {
 				}
 			}
 			if (isDebugEnabled) {
-				logger.info("key = " + key);
+				System.out.println("key = " + key);
 			}
 			if (isDeleteEnabled && isDelete) {
 				regon.destroy(key);
 				continue;
 			}
 
-			/*
-			 * Value
-			 */
-			Object value;
-
-			// Determine the value column names.
-			if (valueColumnNames == null) {
-				valueColumnNames = getColumnNames(valueStruct);
-			}
-			Object valueFieldValues[] = new Object[valueColumnNames.length];
-			for (int j = 0; j < valueColumnNames.length; j++) {
-				valueFieldValues[j] = afterStruct.get(valueColumnNames[j]);
-			}
+			// Value
+			Object value = null;
 			try {
 				value = objConverter.createValueObject(valueFieldValues);
 			} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
@@ -272,9 +338,10 @@ public class DebeziumKafkaSinkTask extends SinkTask {
 			}
 			if (isDebugEnabled) {
 				for (int j = 0; j < valueColumnNames.length; j++) {
-					logger.info("valueColumnNames[" + j + "] = " + valueColumnNames[j] + ": " + valueFieldValues[j]);
+					System.out.println(
+							"valueColumnNames[" + j + "] = " + valueColumnNames[j] + ": " + valueFieldValues[j]);
 				}
-				logger.info("value = " + value);
+				System.out.println("value = " + value);
 			}
 
 			keyValueMap.put(key, value);
@@ -305,7 +372,7 @@ public class DebeziumKafkaSinkTask extends SinkTask {
 
 	@Override
 	public void flush(Map<TopicPartition, OffsetAndMetadata> offsets) {
-		// Ignore
+		logger.trace("Flushing map for {}", logRegionPath());
 	}
 
 	@Override
@@ -313,5 +380,9 @@ public class DebeziumKafkaSinkTask extends SinkTask {
 		if (clientCache != null && clientCache.isClosed() == false) {
 			clientCache.close();
 		}
+	}
+
+	private String logRegionPath() {
+		return regionPath == null ? "stdout" : regionPath;
 	}
 }
