@@ -2,8 +2,9 @@ PadoGrid
 ========
 
 Release: Version 0.9.5-SNAPSHOT
-Release Date: 02/09/21
+Release Date: 02/10/21
 
+- Merged Debezium JSON support between Hazelcast and Geode.
 - Added find_padogrid for searching files in PadoGrid. You can now perform
   a global search on your RWEs for any files that are part of workspace installations.
 - Added support for DB ingestion and updated 'test_group' with 'clear' support in Geode.
